--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,6 +13,7 @@ import logo from '../images/logo.svg';
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/blog">Blog</a></li>
+        <li><a href="/admin">Login</a></li>
       </ul>
     </nav>
   </div>
