--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,7 +3,7 @@ import Showcase from "../../components/Showcase.astro";
 import CardV2 from "../../components/CardV2.astro";
 import Layout from "../../layouts/Layout.astro";
 
-const posts = await Astro.glob('../../posts/*/*.md');
+const posts = await Astro.glob('../../posts/*.md');
 
 // Headless Fetch example
 // const response = await fetch('https://jsonplaceholder.typicode.com/posts?_limit=5');
